--- a/CSS/Setting_Solo.css
+++ b/CSS/Setting_Solo.css
@@ -1,15 +1,35 @@
-.logo img {
-  width: ;
-  height: auto;
-  margin: 2% 0;
+.Logo{
+  position:relative;
+  float: left;
+  left:0px;
+  margin-left: -8%;
+  margin-top:;
+  width:15%;
+  height: 15%;
+}
+
+.bookmarkscontainer {
+  text-align: center;
+}
+
+.roadmap {
+  text-align: center;
+  font-family: 'Caveat', cursive;
+  font-size: 1.6em;
+  white-space: nowrap;
+  overflow: hidden;
+  color: #DCDCDC;
 }
 
 body {
     background-color: #EEEEEE;
-    font-family: 'Open Sans';
+    font-family: 'Open Sans', sans-serif;
+    color: #34495E;
     font-size: 87.5%;
     text-align: center;
     line-height: 2;
+    background-color: #EEEEEE;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .body {
@@ -23,22 +43,9 @@ h1 {
     color: #91688F;
     text-align: center;
     font-family: 'Caveat', cursive;
-    font-size: 5em;
+    font-size: 4em;
     margin-bottom: none;
 }
-
-
-h2 {
-  color: #91688F;
-  text-align: center;
-}
-
-
-h3 {
-  color: #91688F;
-  text-align: center;
-}
-
 
 p {
     font-family: 'Open Sans';
@@ -53,7 +60,7 @@ p {
 
 form {
   text-align: left;
-  margin-left: 25%;
+  margin-left: 24%;
   margin-top: 2%;
   margin-bottom: 2%;
 }
@@ -62,13 +69,31 @@ label {
   font-family: 'Open Sans';
   font-size: 1.2em;
   color: #34495E;
-  margin-right: 2%;
+
 }
+
+#name {
+  margin-right: 25%;
+}
+
+#project {
+  margin-right: 15%;
+}
+
+#panels {
+  margin-right: 4.8%;
+}
+
+#time {
+  margin-right: 23%;
+}
+
 /* Creates the text-line field */
 .text-line {
       background-color: transparent;
       color: black;
       text-align: left;
+      font-size: 1.2em;
       outline: none;
       outline-style: none;
       border-top: none;
@@ -76,11 +101,8 @@ label {
       border-right: none;
       border-bottom: solid black 1.5px;
       padding: 3px 10px;
+      margin-right: 25%;
   }
-
-.number-range {
-
-}
 
 /* Remove controls from Firefox */
 input[type=number] {
@@ -127,10 +149,6 @@ input[type=range]:focus::-webkit-slider-runnable-track {
     background: #ccc;
 }
 
-.pop-up {
-
-}
-
 .start-button {
     background-color: white;
     color: #68A0A0;
@@ -145,3 +163,42 @@ input[type=range]:focus::-webkit-slider-runnable-track {
     background-color: #68A0A0; /* Green */
     color: white;
 }
+
+/* Hover tooltips */
+.field-tip {
+    position:relative;
+}
+    .field-tip .tip-content {
+        position:absolute;
+        top:-10px; /* - top padding */
+        right:9999px;
+        width:200px;
+        margin-right:-220px; /* width + left/right padding */
+        padding:10px;
+        color:#fff;
+        background:#333;
+        -webkit-box-shadow:2px 2px 5px #aaa;
+           -moz-box-shadow:2px 2px 5px #aaa;
+                box-shadow:2px 2px 5px #aaa;
+        opacity:0;
+        -webkit-transition:opacity 250ms ease-out;
+           -moz-transition:opacity 250ms ease-out;
+            -ms-transition:opacity 250ms ease-out;
+             -o-transition:opacity 250ms ease-out;
+                transition:opacity 250ms ease-out;
+    }
+        /* <http://css-tricks.com/snippets/css/css-triangle/> */
+        .field-tip .tip-content:before {
+            content:' '; /* Must have content to display */
+            position:absolute;
+            left:-16px; /* 2 x border width */
+            width:0;
+            height:0;
+            margin-top:-8px; /* - border width */
+            border:8px solid transparent;
+            border-right-color:#333;
+        }
+        .field-tip:hover .tip-content {
+            right:-20px;
+            opacity:1;
+        }
