--- a/CSS/drawing-page-individual.css
+++ b/CSS/drawing-page-individual.css
@@ -17,7 +17,7 @@ font-size: 4em;
 position: relative;
 color: #91688F;
 width: 80%;
-margin-left: 40%;
+margin-left: 35%;
 height: 10%;
 
 }
@@ -29,6 +29,11 @@ height: 10%;
     font-weight: 400;
     color: #34495E;
     text-align: center;
+}
+span
+{
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 600;
 }
 .header-holder
 {
@@ -45,7 +50,7 @@ height: 10%;
 {
     float: right;
     text-align: center;
-    margin-right: 5%;
+    margin-right: 1%;
     font-size: 3em;
     font-family: 'Open Sans', sans-serif;
     width:15%;
@@ -61,13 +66,13 @@ height: 10%;
 }
 .create-bar
 {
-   
+   margin-bottom: 3px;
     position: relative;
     width: 100%;
     float: left;
     margin-top: 2%;
 
-    margin-left: 35%;
+    margin-left: 27%;
     margin-right: 2%;
     height: 50px;
   
@@ -87,10 +92,10 @@ height: 10%;
     font-weight: 400;
     position: relative;
     float: left;
-    padding-left: 10%;
+    padding-left: 7%;
     padding-right: 10%;
     width: 60%;
-    margin-left: 8%;
+    margin-left: 0%;
     height: 35px;
     color: #34495E;
 }
