--- a/CSS/drawing-page-individual.css
+++ b/CSS/drawing-page-individual.css
@@ -18,7 +18,7 @@ position: relative;
 color: #91688F;
 width: 80%;
 margin-left: 35%;
-height: 10%;
+height: 8%;
 
 }
     
@@ -40,7 +40,7 @@ span
    
     position: relative;
     width: 100%;
-    height: 10%;
+    height: 9%;
     margin-top: 0;
 
 
@@ -66,12 +66,11 @@ span
 }
 .create-bar
 {
-   margin-bottom: 3px;
     position: relative;
     width: 100%;
     float: left;
     margin-top: 2%;
-
+    font-size: 1em;
     margin-left: 27%;
     margin-right: 2%;
     height: 50px;
@@ -108,7 +107,7 @@ span
     border-radius: 10px;
     margin:2.5%;
     position: relative;
-    height: 85px;
+    height: 80px;
     margin-bottom: 1pt;
 }
 #panels:hover
@@ -336,7 +335,7 @@ button:hover
     width: 100%;
     float: left;
     background-color: #eee;
-    height: 430px;
+    height: 420px;
     color: #68A0A0;
     -webkit-box-sizing:border-box; 
     -moz-box-sizing:border-box; 
